--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
@@ -17,14 +20,19 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@prisma/client": "^6.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
+    "i": "^0.3.7",
+    "npm": "^10.9.2",
     "postcss": "^8",
+    "prisma": "^6.6.0",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
