--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
     "next": "^14.2.25",
