--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^14.2.25",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@prisma/client": "^6.6.0",
